objects/noduplicates__Merge_Rule__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Blank_Account_Strategy__c</fullName>
        <label>Blank Account Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skip</fullName>
                    <default>true</default>
                    <label>Skip</label>
                </value>
                <value>
                    <fullName>Create New Account</fullName>
                </value>
                <value>
                    <fullName>Use Existing Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>noduplicates__Converted_Status__c</fullName>
        <label>Converted Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Existing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merge Rules</relationshipLabel>
        <relationshipName>Merge_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>noduplicates__Fallback_Strategy__c</fullName>
        <label>Fallback Strategy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Field_Value_Strategy__c</fullName>
        <label>Field Value Strategy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Master_Record_Strategy__c</fullName>
        <label>Master Record Strategy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Master_Values__c</fullName>
        <label>Master Values</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>noduplicates__Matching_Rule__c</fullName>
        <label>Matching Rule</label>
        <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
        <relationshipLabel>Merge Rules</relationshipLabel>
        <relationshipName>Merge_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>noduplicates__Opportunity_Strategy__c</fullName>
        <label>Opportunity Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Take_Account_Name_From__c</fullName>
        <label>Take Account Name From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Take_Opportunity_Name_From__c</fullName>
        <label>Take Opportunity Name From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Merge Rule</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Merge Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>